# api_livekit

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  server_run.py  sip_dispatcher_run.py  verify_sip_bridge.py
.agents/skills/coding-skills/: SKILL.md
.agents/skills/ui-ux-premium/: SKILL.md
.claude/agents/: code-simplicity-reviewer.md
docker/: Dockerfile.agent  Dockerfile.control  requirements-agent.txt  requirements-control.txt
docs/: architecture.md  features.md  getting-started.md  index.md
docs/api/: activity-logs.md  assistant.md  authentication.md  calls.md  documentation.md  errors.md  health.md  sip.md  tools.md
docs/architecture/: audio-pipeline.md  call-flows.md  inbound.md  index.md  runtime-modes.md
docs/getting-started/: end-to-end-example.md  inbound.md  index.md  outbound-sip.md  web-call.md
docs/stylesheets/: premium.css
scripts/: backfill_billable_duration_minutes.py  backfill_call_records.py  migrate_assistants.py
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/api/: dependencies.py  server.py
src/core/: billing.py  config.py  database.py  logger.py
src/services/: outbound_dispatcher.py
tests/: call.sh  test_assistant_route.py  test_assistant_schemas.py  test_audio_assets.py  test_call_route.py  test_livekit_lifecycle.py  test_phone_number_platform_grouping.py  test_session_audio.py  test_session_lifecycle.py  test_sip_client.py  test_stateful_resampler.py
(+118 files in other folders)
