[project]
name = "api-livekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "gunicorn>=25.0.3",
    "beanie>=1.26.0",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0",
    "livekit-agents[cartesia,openai,sarvam,turn-detector]~=1.3",
    "chevron>=0.14.0",
    "mkdocs-material>=9.7.1",
    "mkdocs>=1.6.1"
]
