[project]
name = "api-livekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "gunicorn>=25.0.3",
    "beanie>=1.26.0",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0",
    "livekit-agents[cartesia,google,openai,turn-detector]~=1.4",
    "livekit-plugins-sarvam==1.3.*",
    "chevron>=0.14.0",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mistralai>=2.1.3",
]
